Changes from Gaffney score to Kumasaka score, as well as added several example dataset for vignettes and a read read.motif.database function to read txt motifs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,11 @@ export(data.update)
 export(kumasaka.score)
 export(pwm.compare)
 export(read.input.file)
+export(read.motif.database)
 export(snp.plot)
 export(to.PWM)
 import(Biostrings)
 import(VariantAnnotation)
 import(ggplot2)
+import(matrixStats)
 importFrom(cowplot,plot_grid)
