--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,19 @@ export(Window.update)
 export(analyse.pwm)
 export(data.update)
 export(kumasaka.score)
+export(p.value.calculation)
 export(pwm.compare)
 export(read.input.file)
 export(read.motif.database)
 export(snp.plot)
 export(to.PWM)
+import(BiocParallel)
 import(Biostrings)
+import(GenomeInfoDb)
+import(GenomicRanges)
+import(IRanges)
+import(S4Vectors)
+import(TFMPvalue)
 import(VariantAnnotation)
 import(ggplot2)
 import(matrixStats)
