--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,5 @@ import(S4Vectors)
 import(TFMPvalue)
 import(VariantAnnotation)
 import(ggplot2)
-import(matrixStats)
+importFrom(SummarizedExperiment,rowRanges)
 importFrom(cowplot,plot_grid)
