Added trimming of difficult to calculate motifs, due to pvalue constrains. Also added chr and bed filter for variants

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(read.input.file)
 export(read.motif.database)
 export(snp.plot)
 export(to.PWM)
+export(trim.motifs)
 import(BiocParallel)
 import(Biostrings)
 import(GenomeInfoDb)
