--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(read.motif.database)
 export(snp.plot)
 export(to.PWM)
 export(trim.motifs)
+export(variant.plot)
 import(BiocParallel)
 import(Biostrings)
 import(GenomeInfoDb)
@@ -22,5 +23,7 @@ import(S4Vectors)
 import(TFMPvalue)
 import(VariantAnnotation)
 import(ggplot2)
+import(ggrepel)
+import(gridExtra)
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(cowplot,plot_grid)
